navbar secciones e iconos

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,1 +1,66 @@
-<p>navigation works!</p>
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark " >
+
+    <div class="logo">
+      <img src="assets\img\APLogo-20-20.png" alt="argprog" id="argprog">
+     </div>
+
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navibot" aria-controls="navibot" aria-expanded="false" aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
+     </button>
+
+     <div class="collapse navbar-collapse  justify-content-evenly" id="navibot">
+
+        <div>
+         <ul class="navbar-nav mt-2 mt-lg-0" >
+           <li class="nav-item">
+             <a class="nav-link" href="#aboutme">Acerca de</a>
+           </li>
+           <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Skills
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#hard">Hard</a>
+              <a class="dropdown-item" href="#soft">Soft</a>
+
+            </div>
+          </li>
+          <li class="nav-item">
+             <a class="nav-link" href="#carrera">Carrera</a>
+            </li>
+            <li class="nav-item">
+             <a class="nav-link" routerLink="/experiencia">Experiencia</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" routerLink="/proyectos">Proyectos</a>
+           </li>
+           <li class="nav-item">
+              <a class="nav-link" routerLink="/aboutme">Contacto</a>
+           </li>
+         </ul>
+        </div>
+
+       <div class="redes">
+         <a class="btn" href="#!" role="button">
+           <i class="fa fa-facebook-square fa-2x"></i>
+         </a>
+
+         <a class="btn" href="#!" role="button">
+           <i class="fa fa-instagram fa-2x"></i>
+         </a>
+
+         <a class="btn" href="#!" role="button">
+            <i class="fa fa-github fa-2x"></i>
+         </a>
+
+       </div>
+      </div>
+
+
+  </nav>
+  </div>
+
+
+
+
