--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,68 +1,70 @@
-<div class="container-fluid">
+<div class="container-fluid ">
   <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark ">
 
 
 
-     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navibot" aria-controls="navibot" aria-expanded="false" aria-label="Toggle navigation">
-     <span class="navbar-toggler-icon"></span>
-     </button>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navibot"
+      aria-controls="navibot" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-     <div class="logo">
+    <div>
       <img src="assets\img\APLogo-20-20.png" alt="argprog" id="argprog">
-     </div>
+    </div>
 
-          <div class="collapse navbar-collapse justify-content-between" id="navibot">
+    <div class="collapse navbar-collapse" id="navibot">
 
-        <div>
-         <ul class="navbar-nav mt-2 mt-lg-0" >
-           <li class="nav-item">
-             <a class="nav-link" href="">Acerca de</a>
-           </li>
-           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Skills
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="">Hard</a>
-              <a class="dropdown-item" href="">Soft</a>
+        <div class="container d-flex justify-content-around">
+          <div>
+          <ul class="navbar-nav mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Skills
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="">Hard</a>
+                <a class="dropdown-item" href="">Soft</a>
 
-            </div>
-          </li>
-          <li class="nav-item">
-             <a class="nav-link" href="">Carrera</a>
+              </div>
             </li>
             <li class="nav-item">
-             <a class="nav-link" href="">Experiencia</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="">Proyectos</a>
-           </li>
-           <li class="nav-item">
+              <a class="nav-link" href="">Carrera</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Experiencia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Proyectos</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="">Contacto</a>
-           </li>
-         </ul>
+            </li>
+          </ul>
         </div>
 
-       <div class="redes">
-         <a class="btn" href="#!" role="button">
-           <i class="fa fa-facebook-square fa-2x"></i>
-         </a>
+        </div>
+        <div class="d-inline-flex">
+          <a class="btn" href="#!" role="button">
+            <i class="fa fa-facebook-square fa-2x"></i>
+          </a>
 
-         <a class="btn" href="#!" role="button">
-           <i class="fa fa-instagram fa-2x"></i>
-         </a>
+          <a class="btn" href="#!" role="button">
+            <i class="fa fa-instagram fa-2x"></i>
+          </a>
 
-         <a class="btn" href="#!" role="button">
+          <a class="btn" href="#!" role="button">
             <i class="fa fa-github fa-2x"></i>
-         </a>
+          </a>
 
-       </div>
+        </div>
+
       </div>
 
 
+
   </nav>
-  </div>
-
-
-
-
+</div>
