--- a/src/app/components/aboutme/aboutme.component.html
+++ b/src/app/components/aboutme/aboutme.component.html
@@ -1,27 +1,16 @@
-<div class="container-fluid  mb-5 flex-column">
+<div class="container-fluid mb-5 flex-column">
   <!-- Nombre del propietario del portfolio -->
   <div class="container text-white">
     <h1 class="titulo">Hola! Soy <b id="titulo">{{persona.nombre}}</b></h1>
   </div>
   <!--Imagen del propietario del portfolio -->
-  <div class="container mb-4">
+  <div class="container mt-5 mb-5">
     <div class="container d-flex justify-content-center align-items-center">
       <img class="yoimg" [src]="persona.imagen" alt="yo">
     </div>
-    <div class="container d-flex justify-content-center">
-      <!-- Boton modal edicion -->
-      <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#imagenModal">
-        <i class="fa-solid fa-pencil m-2 text-white"></i>
-      </button>
-      <!--Boton eliminar -->
-      <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        <i class="fa-solid fa-trash m-2 text-white"></i>
-      </button>
-
-    </div>
   </div>
   <!--Descripcion del propietario del portfolio -->
-  <div class="container d-flex align-items-center flex-column">
+  <div class="container d-flex align-items-center flex-column mt-5">
     <div class="container text-left" id="descrip">
       <p class="parrafo"> {{persona.descripcion}}
       </p>
