--- a/src/app/modales/skill-add-edit/skill-add-edit.component.html
+++ b/src/app/modales/skill-add-edit/skill-add-edit.component.html
@@ -1,6 +1,6 @@
 <!-- Modal -->
 <ng-template #content let-modal>
-  <form [formGroup]="formAddEdit" (ngSubmit)="onSave($event)">
+  <form [formGroup]="formEdit" (ngSubmit)="onSave($event)">
 
     <!-- Titulo -->
     <div class="modal-header">
