--- a/src/app/modales/edu-add-edit/edu-add-edit.component.html
+++ b/src/app/modales/edu-add-edit/edu-add-edit.component.html
@@ -1,6 +1,6 @@
 <!-- Modal -->
 <ng-template #content let-modal>
-  <form [formGroup]="formEditEdu" (ngSubmit)="onSave($event)">
+  <form [formGroup]="formAddEditEdu" (ngSubmit)="onSave($event)">
 
           <div class="modal-header">
             <h5 class="modal-title" id="EditEduModalLabel" *ngIf="!addMode">Editar educacion</h5>
