--- a/src/app/components/skills-hard/skills-hard.component.html
+++ b/src/app/components/skills-hard/skills-hard.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid mt-5 mb-5" id="hard">
+<div class="container-fluid mt-5 mb-5" id="hard" >
 
   <div class="titulo m-5 d-flex flex-row justify-content-between">
     <div>
-      <h1>Hard Skills</h1>
+      <h1 #hardskill>Hard Skills</h1>
     </div>
 
      <!-- Modal boton agregar Skill -->
@@ -12,17 +12,17 @@
     </button>
   </div>
 
-  <div class="row justify-content-center">
-    <div class="col-lg-5 col-md-10">
+  <div class="row justify-content-center" >
+    <div class="col-lg-5 col-md-10 ani" #hardskill1>
       <!-- Subtitulo -->
-      <div class="container d-flex flex-row justify-content-center mt-4">
+      <div class="container d-flex flex-row justify-content-center mt-4" >
         <i class="fa-solid fa-laptop-code fa-2x text-white"></i>
         <h4>Frontend</h4>
       </div>
       <!-- Listado Frontend Skills -->
       <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo">
-        <div class="container" *ngSwitchCase="'Frontend'">
-          <div class="container d-flex flex-row">
+        <div class="container m-3"  *ngSwitchCase="'Frontend'" >
+          <div class="container d-flex flex-row" >
             <div class="container d-flex align-items-end">
               <h5 class="font-weight-bold text-uppercase">{{skill.nombre}}</h5>
             </div>
@@ -40,7 +40,7 @@
 
           <!-- Progress bar Frontend -->
           <div class="progress">
-            <div class="progress-bar " role="progressbar" [style.width.%]="skill.porcentaje" aria-valuenow="0"
+            <div class="progress-bar" role="progressbar" [style.width.%]="skill.porcentaje" aria-valuenow="0"
               aria-valuemin="0" aria-valuemax="100"
               [ngClass]="{'html': i == 0, 'css' : i==1, 'bootstrap': i==2, 'javascript': i==3, 'angular': i==4}">
               {{skill.porcentaje}}%
@@ -54,15 +54,15 @@
 
 
 
-    <div class="col-lg-5 col-md-10">
+    <div class="col-lg-5 col-md-10 ani" #hardskill2>
       <div class="container d-flex align-items-center justify-content-center mt-4">
         <i class="fa-solid fa-laptop-code fa-2x text-white"></i>
         <h4>Backend</h4>
 
       </div>
 
-      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo">
-        <div class="container" *ngSwitchCase="'Backend'">
+      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" >
+        <div class="container m-3" *ngSwitchCase="'Backend'" >
           <div class="container d-flex flex-row">
             <div class="container d-flex align-items-end">
               <h5 class="font-weight-bold text-uppercase">{{skill.nombre}}</h5>
@@ -91,13 +91,13 @@
       </div>
 
 
-      <div class="container d-flex align-items-center justify-content-center mt-4 ">
+      <div class="container d-flex align-items-center justify-content-center mt-4 ani" #hardskill3>
         <i class="fa-solid fa-language fa-2x text-white"></i>
         <h4>Idiomas</h4>
       </div>
 
-      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo">
-        <div class="container " *ngSwitchCase="'Idioma'">
+      <div *ngFor="let skill of skills; let i = index" [ngSwitch]="skill.tipo" >
+        <div class="container m-3" *ngSwitchCase="'Idioma'">
           <div class="container d-flex flex-row">
             <div class="container d-flex align-items-end">
               <h5 class="font-weight-bold text-uppercase">{{skill.nombre}}</h5>
