--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,30 +1,30 @@
 <div  class="container-fluid mt-5 mb-5" id="educacion">
-  <div class="titulo m-5 d-flex flex-row justify-content-between">
+  <div class="titulo m-3 d-flex flex-row justify-content-between">
     <div>
       <h1>Experiencia</h1>
     </div>
   </div>
     <!-- Modal boton agregar experiencia -->
-    <button type="button" class="btn text-white d-flex flex-row align-items-end" (click)="addEditExperiecia(id)"  *ngIf="loggedIn">
+    <button type="button" class="btn text-white d-flex flex-row align-items-end" (click)="addEditExperiencia(id)"  *ngIf="loggedIn">
       <i class="fa-solid fa fa-plus fa-2x m-1"></i>
       <h5>Agregar</h5>
     </button>
 
-  <div class=" container d-flex flex-column align-items-center m-5">
-    <div class="col-7 m-2 p-2 d-flex flex-row justify-content-around">
+  <div class=" container d-flex flex-row align-items-center m-5">
+    <div class="col-3 m-3 p-3 d-flex flex-column justify-content-center align-items-center ">
       <div *ngFor="let expe of experiencias; let i = index">
-        <button class="circulo" autofocus (click)="seleccionado(expe.id)"
+        <button class="circulo m-3" autofocus (click)="seleccionado(expe.id)"
           [ngClass]="{'active': selectedItem == expe.id}">
-          <p class="anios">{{expe.inicio}}</p>
+          <p class="nombre">{{expe.nombre}}</p>
         </button>
       </div>
     </div>
 
-    <div class="col-10 m-2 p-2">
+    <div class="col-5 m-2 p-2">
       <div *ngFor="let expe of experiencias; let i = index"
         [ngStyle]="{'display': selectedItem == expe.id ? 'contents':'none'}">
         <fieldset>
-          <legend>{{expe.nombre}}</legend>
+          <legend>{{expe.puesto}}</legend>
           <div class="container d-flex flex-row  align-items-center justify-content-center m-2 p-3" id="seccionFondo">
             <div class="col-4 d-flex flex-column  align-items-center justify-content-center">
               <img [src]="expe.logo" alt="logo">
@@ -38,7 +38,7 @@
 
           <div class="container d-flex justify-content-end">
             <!-- Modal boton edicion Frontend -->
-           <button type="button" class="btn text-white fa fa-pencil"  *ngIf="loggedIn">
+           <button type="button" class="btn text-white fa fa-pencil" (click)="addEditExperiencia(expe.id)" *ngIf="loggedIn">
             </button>
             <!-- Boton eliminar Frontend -->
             <button type="button" class="btn" (click)="deleteExperiencia(expe.id)" *ngIf="loggedIn">
@@ -50,3 +50,4 @@
   </div>
 </div>
 
+<app-expe-add-edit></app-expe-add-edit>
