--- a/src/app/modales/expe-add-edit/expe-add-edit.component.html
+++ b/src/app/modales/expe-add-edit/expe-add-edit.component.html
@@ -1,1 +1,100 @@
-<p>expe-add-edit works!</p>
+<!-- Modal -->
+<ng-template #content let-modal>
+  <form [formGroup]="formAddEditExpe" (ngSubmit)="onSave($event)">
+
+    <div class="modal-header">
+      <h5 class="modal-title" id="EditExpeModalLabel" *ngIf="!addMode">Editar experiencia</h5>
+      <h5 class="modal-title" id="addExpeModalLabel" *ngIf="addMode">Agregar experiencia</h5>
+      <button type="button" class="btn-close" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+
+      <div class="mb-3">
+        <label for="InputNombreExpe" class="form-label">Empresa</label>
+        <input type="text" class="form-control" formControlName="nombre" id="EditNombreExpe"
+          placeholder="Ingresar nombre"
+          [ngClass]="{'is-invalid': Nombre?.errors  && Nombre?.touched, 'is-valid': !Nombre?.errors  && Nombre?.touched }">
+        <div *ngIf="Nombre?.errors && Nombre?.touched">
+          <p *ngIf="Nombre?.hasError('required')" class="text-danger">
+            Ingresar Empresa
+          </p>
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="InputPuestoExpe" class="form-label">Puesto</label>
+        <input type="text" class="form-control" formControlName="puesto" id="EditPuestoExpe"
+          placeholder="Ingresar puesto"
+          [ngClass]="{'is-invalid': Puesto?.errors  && Puesto?.touched, 'is-valid': !Puesto?.errors  && Puesto?.touched }">
+        <div *ngIf="Puesto?.errors && Puesto?.touched">
+          <p *ngIf="Puesto?.hasError('required')" class="text-danger">
+            Ingresar puesto
+          </p>
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="InputLogoExpe" class="form-label">Logo</label>
+        <input *ngIf="addMode" type="file" accept=".jpg , .jpeg , .jfif , .pjpeg , .pjp,.png,.svg"
+          class="custom-file-input form-control" formControlName="logo" id="EditLogoEXpe"
+          placeholder="Seleccionar imagen logo"
+          [ngClass]="{'is-invalid': Logo?.errors  && Logo?.touched, 'is-valid': !Logo?.errors  && Logo?.touched }">
+        <input *ngIf="!addMode" type="text" class="form-control" formControlName="logo" id="EditLogoEXpe"
+          placeholder="Seleccionar imagen logo"
+          [ngClass]="{'is-invalid': Logo?.errors  && Logo?.touched, 'is-valid': !Logo?.errors  && Logo?.touched }">
+        <div *ngIf="Logo?.errors && Logo?.touched">
+          <p *ngIf="Logo?.hasError('required')" class="text-danger">
+            Archivo
+          </p>
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="InpuInicioExpe" class="form-label">Inicio</label>
+        <input type="text" class="form-control" formControlName="inicio" id="EditInicioExpe"
+          placeholder="Ingresar mes y año de inicio"
+          [ngClass]="{'is-invalid': Inicio?.errors && Inicio?.touched, 'is-valid': !Inicio?.errors  && Inicio?.touched }">
+        <div *ngIf="Inicio?.errors  && Inicio?.touched">
+          <p *ngIf="Inicio?.hasError('required')" class="text-danger">
+            El mes y año de inicio es requerido.
+          </p>
+        </div>
+      </div>
+
+
+      <div class="mb-3">
+        <label for="InputFinExpe" class="form-label">Fin</label>
+        <input type="text" class="form-control" formControlName="fin" id="EditFinExpe"
+          placeholder="Ingresar mes y año de finalizacion"
+          [ngClass]="{'is-invalid': Fin?.errors && Fin?.touched, 'is-valid': !Fin?.errors  && Fin?.touched }">
+        <div *ngIf="Fin?.errors  && Fin?.touched">
+          <p *ngIf="Fin?.hasError('required')" class="text-danger">
+            El mes y año de finalizacion es requerido.
+          </p>
+
+        </div>
+      </div>
+
+
+      <div class="mb-3">
+        <label for="InputDescripcionExpe" class="form-label">Descripcion</label>
+        <textarea class="form-control" id="message-text" formControlName="descripcion" id="EditDescripcionExpe"
+          placeholder="Ingresar descripcion"
+          [ngClass]="{'is-invalid': Descripcion?.errors  && Descripcion?.touched, 'is-valid': !Descripcion?.errors  && Descripcion?.touched }"></textarea>
+        <div *ngIf="Descripcion?.errors && Descripcion?.touched">
+          <p *ngIf="Descripcion?.hasError('required')" class="text-danger">
+            Ingresar descripcion
+          </p>
+        </div>
+      </div>
+
+
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-secondary" data-bs-dismiss="modal" *ngIf="!addMode">Guardar</button>
+        <button type="submit" class="btn btn-secondary" data-bs-dismiss="modal" *ngIf="addMode">Agregar</button>
+      </div>
+
+    </div>
+
+  </form>
+</ng-template>
