--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,53 +1,61 @@
-<div  class="container-fluid mt-5 mb-5" id="educacion">
-  <div class="titulo m-3 d-flex flex-row justify-content-between">
+<div class="container-fluid mt-5 mb-5" >
+  <div class="titulo m-5 d-flex flex-row justify-content-between">
     <div>
-      <h1>Experiencia</h1>
+      <h1 #expe id="experiencia">Experiencia</h1>
     </div>
-  </div>
-    <!-- Modal boton agregar experiencia -->
-    <button type="button" class="btn text-white d-flex flex-row align-items-end" (click)="addEditExperiencia(id)"  *ngIf="loggedIn">
-      <i class="fa-solid fa fa-plus fa-2x m-1"></i>
-      <h5>Agregar</h5>
-    </button>
 
-  <div class=" container d-flex flex-row align-items-center m-5">
-    <div class="col-3 m-3 p-3 d-flex flex-column justify-content-center align-items-center ">
+    <!-- Modal boton agregar experiencia -->
+    <button #expe3 type="button" class="btn text-white d-flex flex-row align-items-end ani" (click)="addEditExperiencia(id)"
+      *ngIf="loggedIn">
+      <i class="fa-solid fa fa-plus m-1"></i>
+      <span>Agregar</span>
+    </button>
+  </div>
+
+  <div class=" row d-flex flex-row align-items-center justify-content-center m-5 ani" #expe1>
+    <div class="col-lg-3 col-md-11 d-flex p-3" id="botones">
       <div *ngFor="let expe of experiencias; let i = index">
-        <button class="circulo m-3" autofocus (click)="seleccionado(expe.id)"
+        <button class="circulo text-center m-3" autofocus (click)="seleccionado(expe.id)"
           [ngClass]="{'active': selectedItem == expe.id}">
           <p class="nombre">{{expe.nombre}}</p>
         </button>
       </div>
     </div>
 
-    <div class="col-5 m-2 p-2">
+    <div class="col-lg-7 col-md-11 p-2 ani" #expe2>
       <div *ngFor="let expe of experiencias; let i = index"
         [ngStyle]="{'display': selectedItem == expe.id ? 'contents':'none'}">
-        <fieldset>
-          <legend>{{expe.puesto}}</legend>
-          <div class="container d-flex flex-row  align-items-center justify-content-center m-2 p-3" id="seccionFondo">
-            <div class="col-4 d-flex flex-column  align-items-center justify-content-center">
-              <img [src]="expe.logo" alt="logo">
-              <p class="text-center">{{expe.inicio}}-{{expe.fin}}</p>
-            </div>
-            <div class="container d-flex flex-column justify-content-start">
+        <div>
+          <div>
+            <span id="puesto">{{expe.puesto}} </span><span id="subEmpresa">en {{expe.nombre}}</span>
+          </div>
+          <p class="text-start" id="periodo">{{expe.inicio}}-{{expe.fin}}</p>
+
+          <div class="container">
+            <div class="text-white mt-5">
               <p>{{expe.descripcion}}</p>
             </div>
+            <div class="container  mt-5">
+              <img [src]="expe.logo" alt="logo">
+            </div>
           </div>
-          </fieldset>
 
-          <div class="container d-flex justify-content-end">
-            <!-- Modal boton edicion Frontend -->
-           <button type="button" class="btn text-white fa fa-pencil" (click)="addEditExperiencia(expe.id)" *ngIf="loggedIn">
-            </button>
-            <!-- Boton eliminar Frontend -->
-            <button type="button" class="btn" (click)="deleteExperiencia(expe.id)" *ngIf="loggedIn">
-              <i class="fa-solid fa-trash text-white"></i>
-            </button>
+
+        </div>
+
+        <div class="container d-flex justify-content-end">
+          <!-- Modal boton edicion Experiencia -->
+          <button type="button" class="btn text-white fa fa-pencil" (click)="addEditExperiencia(expe.id)"
+            *ngIf="loggedIn">
+          </button>
+          <!-- Boton eliminar Experiencia -->
+          <button type="button" class="btn" (click)="deleteExperiencia(expe.id)" *ngIf="loggedIn">
+            <i class="fa-solid fa-trash text-white"></i>
+          </button>
+        </div>
+
       </div>
-
     </div>
   </div>
-</div>
 
-<app-expe-add-edit></app-expe-add-edit>
+  <app-expe-add-edit></app-expe-add-edit>
